Wrote description of airline Bertrand market python module

--- a/Bertrand.ipynb
+++ b/Bertrand.ipynb
@@ -188,7 +188,178 @@
    "source": [
     "According to the theory, the one who sets the lowest price gets all the customers. The problem here is that the availability of tickets is also scarce. \n",
     "\n",
-    "I have run three example games of how this might play out. In the first game Airline 1 sets ticket price to 75 and Airline 2 sets the ticket price to 80. The outcome of the game is that Airline 1 has a nearly full plane, while Airline 2 sells no tickets at all. I leave it to the reader to play around with this."
+    "I have run three example games of how this might play out. In the first game Airline 1 sets ticket price to 75 and Airline 2 sets the ticket price to 80. The outcome of the game is that Airline 1 has a nearly full plane, while Airline 2 sells no tickets at all. I leave it to the reader to play around with this if they like. However, the way I have constructed the \"airline game\" is not very flexible. It is not very easy to introduce a third airline into the mix, for instance. One will likely be reusing a lot of code in this script-like setup. A better way of doing things is with an object-oriented design."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## The Object-Oriented Airline Game\n",
+    "You could easily skip this paragraph if you know what Object-Oriented Desing is. In object-oriented programming (OOP) or design (OOD), one constructs classes as templates that represent real-life objects. An airline or airplane could easily be made into a class. All airlines have the same attributes, at least within this simple world in which we are imagining ourselves. Example of such attributes can be a name, a capacity and a price. A particular instance of the airline class would be an object, or class instance. I have constructed a module for playing the airline game in an object-oriented way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Importing airline module\n",
+    "from airlines import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now all classis within the module should be imported. There are three classes available in the module `Airline`, `DemandFunction` and `AirlineMarket`. The use of each class is quite self-explanatory. The `Airline` class allows you to make `Airline` objects. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Airline:   British Airways\n",
+      "Capacity:             100\n",
+      "Price:                 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating new Airline object\n",
+    "british_airways = Airline()\n",
+    "\n",
+    "# Setting attributes\n",
+    "british_airways.set_name(\"British Airways\")\n",
+    "british_airways.set_capacity(100)\n",
+    "british_airways.set_price(50)\n",
+    "\n",
+    "# Printing attributes\n",
+    "print(\"{:10s} {:>14s}\".format(\"Airline:\", british_airways.get_name()))\n",
+    "print(\"{:10s} {:>14d}\".format(\"Capacity:\", british_airways.get_capacity()))\n",
+    "print(\"{:10s} {:>14d}\".format(\"Price:\", british_airways.get_price()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, all attributes of the class can be added when the object is constructed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Airline:       Air France\n",
+      "Capacity:             120\n",
+      "Price:                 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating new Airline object\n",
+    "air_france = Airline(\"Air France\", 120, 45)\n",
+    "\n",
+    "# Printing attributes\n",
+    "print(\"{:10s} {:>14s}\".format(\"Airline:\", air_france.get_name()))\n",
+    "print(\"{:10s} {:>14d}\".format(\"Capacity:\", air_france.get_capacity()))\n",
+    "print(\"{:10s} {:>14d}\".format(\"Price:\", air_france.get_price()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `DemandFunction` class represents the consumers, or ticket buyers, in the market. It contains several methods for generating sample demand functions. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEWCAYAAABrDZDcAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl4VIW9//H3NwkJOwESICFExLAUZZOIWBBBKlXRYqu1\naq22Wrm2imt/1Vuf27s819Z7byt6q7UVe1usgnqtChW1AopQFzDsKLKIhC3siexb+P7+mBMcuRC2\nTM6Zmc/refJk5pxZPmgmn3zPnDnH3B0REUlfGWEHEBGRcKkIRETSnIpARCTNqQhERNKcikBEJM2p\nCERE0pyKQCSCzKyjmbmZZYWdRVKfikBSmpmtNLPdZrbdzKrM7D0zu9XM9LMvEtCLQdLB5e7eDDgN\neAi4D/hDuJFEokNFIGnD3T9394nAd4AbzewsM8sxs1+Z2Soz22BmvzOzRgBmNtjM1pjZT81so5lV\nmNkVZnapmS01s61m9rOaxzezfmb2fjB5VJjZY2aWHbfeg2lkWXCbx83MgnWZQY7NZrYCGF7P/3kk\njakIJO24+yxgDXA+sQmhC9AbKAHaAz+Pu3k7oGHc8jHA9UDf4P7/ZGanB7etBu4G8oDzgKHAjw97\n+suAc4CewNXA14PltwTr+gClwFV18o8VOQ4qAklX64BWwEjgbnff6u7bgV8A18Tdbj/woLvvB54j\n9kv+UXff7u4fAR8DvQDcfba7f+DuB9x9JfB74ILDnvchd69y91XA28QKCGKl8Ii7r3b3rcAvE/Bv\nFjki7ZEg6ao9sZ//xsDsYAsNgAGZcbfb4u7VweXdwfcNcet3A00BzKwL8DCxv+gbB48/+7DnXR93\neVfNfYFCYHXcuvIT++eInDxNBJJ2zOwcYkXwCrFf5Ge6e27w1cLdm9b+CEf1BPAJ0NndmwM/I1Ys\nx6MC6BB3vfgkM4icMBWBpA0za25mlxHbxPOMu88nts1/tJm1CW7T3sy+Xtvj1KIZsA3YYWbdgB+d\nwH1fAO4wsyIzawncf5IZRE6YikDSwV/NbDuxTS8PENt884Ng3X3AcuADM9sGTAG6nuTz/AS4DthO\nrGCeP4H7jgH+BswH5gAvnWQGkRNmOjGNiEh600QgIpLmVAQiImlORSAikuZUBCIiaS4pPlCWl5fn\nHTt2DDuGiEhSmT179mZ3zz/W7ZKiCDp27EhZWVnYMUREkoqZHdcn1LVpSEQkzakIRETSnIpARCTN\nqQhERNKcikBEJM2pCERE0pyKQEQkzaV0Ebz36WZ+O2152DFERCItpYtg2pJN/OpvS1ixaUfYUURE\nIiuli2DkoE5kZ2Xw2NuaCkREjialiyCvaQ43nNeRV+au5bPNO8OOIyISSSldBAC3nB+bCn4zdVnY\nUUREIinliyC/WQ43nteRl+au5Z4X5vH5rv1hRxIRiZSkOProqbp3WFdysjJ4fNqnvLt8M7/8Vg8u\n7NY27FgiIpGQ8hMBQHZWBvcM68qE2wbQsnE2N/2pjHtfmK/pQESENCmCGme1b8HE2wcy6sISXpm3\nlmGPvMNbn2wIO5aISKjSqgggNh3cO6wrr/x4ALmNYtPBmx+tDzuWiEho0q4IavQoasHEUQPolN+E\nhycv5eBBDzuSiEgo0rYIAHKyMrnjws58sn47b36sqUBE0lNaFwHA5b0K6ZTXhEemLNNUICJpKe2L\nIDPDuGNobCr4m94rEJE0lPZFAF9MBY9O1VQgIulHRUBsKhg1tCR4r0C7k4pIelERBC7vqalARNKT\niiCQlZnB7ReWsLhiG0+88yn7DhwMO5KISL1QEcT5Rq9Czu+cx3/9bQlDfjWNZ2eWqxBEJOWpCOJk\nZWbw9E39GHtTP9o0z+GBlxcx5FfTGDdzlQpBRFKWuUd/e3hpaamXlZXV63O6O9OXbWb05KXMW11F\n+9xG3DakhKv6FpGdpf4Ukegzs9nuXnrM26kIaqdCEJFkpSKoY0cqhNsvLOHKs1UIIhJNKoIEcXfe\nWbqJR6YsUyGISKSpCBKsphBGT1nG/NVVFLVsxO1DSriybxENMlUIIhI+FUE9cXemBRNCfCF8o3ch\njbPT4kygIhJRKoJ6dqgQJi9l/prPadQgkwu7teHSHgUM6ZavUhCRene8RaDfTnXEzBjStQ2Du+Qz\n87OtvLpgHW8sWs+khRWHSmF4zwKGdG1Do+zMsOOKiByS0InAzHKBp4CzAAduApYAzwMdgZXA1e5e\nWdvjJMNEcCTVB52Zn23htYUVvLFoPZt37IuVwlfaMLyHSkFEEisSm4bMbCwww92fMrNsoDHwM2Cr\nuz9kZvcDLd39vtoeJ1mLIN6B6oPM+mwrk4JS2LJTpSAiiRV6EZhZC2Ae0MnjnsTMlgCD3b3CzAqA\nae7etbbHSoUiiHekUihs0ZDxI/tzWusmYccTkRQRhSLoDTwJfAz0AmYDdwJr3T03uI0BlTXXD7v/\nSGAkQHFxcd/y8vKE5AzbgeqD/H35Zu5+fh4NG2TynMpAROrI8RZBInd4zwLOBp5w9z7ATuD++BsE\nk8IRm8jdn3T3Uncvzc/PT2DMcGVlZjC4axue/WF/9uyv5ponP6B8y86wY4lIGklkEawB1rj7zOD6\ni8SKYUOwSYjg+8YEZkga3QubqwxEJBQJKwJ3Xw+sNrOa7f9DiW0mmgjcGCy7EZiQqAzJpqYMdu+v\n5lqVgYjUk0QfC2EU8KyZLQB6A78AHgIuMrNlwNeC6xLoXticcT/szy6VgYjUE32yOKI+XreN6576\ngMYNMrU3kYiclCi8WSynILaZ6NxDk8GqLbvCjiQiKUpFEGFnFrY4VAbXPPk+i9Z+HnYkEUlBKoKI\nqymDAwedKx5/l4cnL9X5k0WkTqkIksCZhS148+5BXN6rkP+euowRj7/LR+s0HYhI3VARJIncxtmM\n/k5vxtxQyuYdexnx2LuM1nQgInVARZBkLurelsl3D+KyngU8GkwH7326mWTY+0tEokm7jyaxNz9a\nzwOvLGLT9r10ym/Cdf2KufLsIlo2yQ47mohEQOgHnatLKoKj272vmkkLKxg3s5w5q6rIzszgkh7t\nuK5fMf1Ob0XsuH4iko5UBGnok/XbGD9zFS/NXcv2PQcoadOUa/sVc+XZ7cltrClBJN2oCNLY7n3V\nvLpgHeNmrWLuqiqyszIY3qOA755bTGnHVmHHE5F6oiIQABZXbGP8rFW8PGct2/ceoH+nVtw5tAvn\nndE67GgikmAqAvmSXfsO8MKHq/nttE/ZuH0v/Tu14q6vdaF/JxWCSKpSEcgR7dlfzfhZq3hChSCS\n8lQEUquaQvjttE/ZpEIQSUkqAjkue/ZXM27mKp54J1YIPYtacF2/Yi7vVUiTnKyw44nIKVARyAnZ\ns7+aF8pW88wH5SzdsIOmOVmM6F3IdecWc2Zhi7DjichJUBHISXF3ZpdXMm7WKiYtqGDvgYP06pDL\ndf06cHmvQhpna0oQSRYqAjllVbv28dKctYybtYrlG2NTwhV9Crmu32l0L2wedjwROQYVgdQZd6es\nvJLxM1fx6sIK9h04SM+iFlzes5BLerSjqGXjsCOKyBGoCCQhqnbt4y9z1vLy3DUsWrsNgN4dchne\no4BLexbQPrdRyAlFpIaKQBKufMtOJi2s4LWFFV8qhct6FnBJD5WCSNhUBFKvVm7eyWuLKpi0oIKP\n1sVKoU9xbFJQKYiEQ0UgoVm5+YtJIb4Uru1XzDf7tKdBps6HJFIfVAQSCTWlMHHeOpZs2M5prRtz\n+5ASvtmnPVkqBJGEUhFIpLg7UxZv5JEpS/lo3TYVgkg9UBFIJB2pEEZd2JkreheqEETqmIpAIu3w\nQujYujH3DuvK5b0Kw44mkjKOtwj0J5iEwsy4qHtbXh01kDE3lNIkJ4tR4+cyZvqKsKOJpB0dOEZC\nVVMIQ7rmc+fz83jwtcWYwQ/P7xR2NJG0oSKQSMjKzODR7/QG4N8nLQZUBiL1RUUgkXGoDFxlIFKf\nVAQSKVmZGTxyzReTQc+iXPqd3irkVCKpTW8WS+Q0yMzgV9/uRV7THB6dujTsOCIpL6FFYGYrzWyh\nmc0zs7JgWSszm2xmy4LvLROZQZJTo+xMbr2gE+8u38KHK7eGHUckpdXHRDDE3XvH7ct6PzDV3TsD\nU4PrIv/Hd889LTYVTFkWdhSRlBbGpqERwNjg8ljgihAySBKomQr+vnwzD7+5hH0HDoYdSSQlJboI\nHJhiZrPNbGSwrK27VwSX1wNtj3RHMxtpZmVmVrZp06YEx5So+t55p/GtPu3577eWM+Lxd/lo3edh\nRxJJOYkugoHu3hu4BLjNzAbFr/TY8S2OeIwLd3/S3UvdvTQ/Pz/BMSWqcrIyefg7vRlzQymbd+xl\nxGPvMnryUk0HInUooUXg7muD7xuBl4F+wAYzKwAIvm9MZAZJDRd1b8vkuwdxea9CHp26TNOBSB1K\nWBGYWRMza1ZzGRgGLAImAjcGN7sRmJCoDJJachtnM/qw6eDP768MO5ZI0kvkB8raAi+bWc3zjHP3\nN8zsQ+AFM7sZKAeuTmAGSUEXdW/LOR1bcu8L8/mnCR9RfdD5/oDTw44lkrQSVgTuvgLodYTlW4Ch\niXpeSQ+5jbN54vq+jBo/h3/568cAKgORk6RPFkvSys7K4DfXns2w7m35l79+zNj3VoYdSSQpqQgk\nqWVnZfDYdbEy+OeJHzFu5qqwI4kkHRWBJL2aMji/cx4PTvqYyp37wo4kklRUBJISsrMy+KfLurNr\nfzVP/V1nORM5ESoCSRld2jZjeI8C/vTuSk0FIidARSAp5Y6hndm1v5oxMzQViBwvFYGklC5tm3F5\nz0J+P30Fry2sOPYdRERnKJPU84tv9WBd1W5GjZ8LwKU9CkJOJBJtmggk5TTNyeJPN/WjT4dcRo2f\ny+uaDERqpSKQlFRTBr075HK7ykCkVioCSVlNc7IYe1M/eha14K7n57Fnf3XYkUQiSUUgKa1pThbD\nexSw98BB9lXrHAYiR6IiEBFJcyoCEZE0pyKQlJcROycGKzfvDDmJSDSpCCTlXXxWO9o1b8j3//gh\niyu2hR1HJHJUBJLyCnMb8dzI/mRnZvDdp2aqDEQOoyKQtNAxr4nKQOQoVASSNjrmNWF8XBmsqdwV\ndiSRSFARSFo5Pa8J4245lx17D/DYW8vDjiMSCSoCSTud8pty7TkdeHH2GlZv1VQgUmsRmFlDM7vL\nzB4zs38wMx2tVFLCjwaXkGHG429rKhA51kQwFigFFgKXAL9OeCKRetCuRUOu7RebCj5epzeOJb0d\nqwi6u/v17v574Crg/HrIJFIvfjS4hBaNGnDFb9/l9+98SvVBDzuSSCiOVQT7ay64+4EEZxGpV+1a\nNOSNuwYxpGs+v3z9E6763Xss37gj7Fgi9e5YRdDLzLYFX9uBnjWXzUzztCS9/GY5/O76vjx6TW8+\n27yTS/97Bk9O13Qg6aXWInD3THdvHnw1c/esuMvN6yukSCKZGSN6t+fNuwcxuEs+v3gtNh0sWb89\n7Ggi9UK7j4oE2jRryO+/F5sOVmzaycWPTmfU+Lks26BCkNSm3UFF4tRMB+d3zuepGSv403sreXXB\nOi7vWcgdQ0soadMs7Igidc7co78ttLS01MvKysKOIWlo6859jJmxgrHvrWT3/moVgiQVM5vt7qXH\nvJ2KQOTYDi+Eb/QqZNSFKgSJNhWBSAJs2bGXMTM+4+n3V7JrXzUDSlpzbb9ihnVvR3aW3nKTaFER\niCTQlh17GT9rFeNnrWZt1W5aN8nmqtIirj2nmI55TcKOJwJEqAjMLBMoA9a6+2Vm1gp4HugIrASu\ndvfK2h5DRSBRVX3QmbFsE+NmrmLqJxupPugMLMnj2n7FXNS9raYECVWUiuAeYscrah4UwX8CW939\nITO7H2jp7vfV9hgqAkkGG7bt4YUPV/Pch7EpIa9pNt8u7cA153TgtNaaEqT+RaIIzKyI2IHrHgTu\nCYpgCTDY3SvMrACY5u5da3scFYEkk+qDzvRgSngrmBJ6d8hlcNd8hnRtQ4/2LcjIsLBjShqIShG8\nCPwSaAb8JCiCKnfPDdYbUFlz/bD7jgRGAhQXF/ctLy9PWE6RRFn/+R5enL2aKYs3Mn9NFe7Qukk2\ng7rkM7hrPoM659OySXbYMSVFhV4EZnYZcKm7/9jMBnOEIghuV+nuLWt7LE0Ekgq27tzHjGWbmLZk\nE+8s3cTWnfvIMOjVIZfBXdowpFs+ZxVqWpC6E4Ui+CXwPeAA0BBoDrwEnIM2DUmaqz7oLFz7OdOW\nbOTtJZtYEEwLeU2zGdQ5n8Hd2jCocx65jTUtyMkLvQgOCzOYLyaC/wK2xL1Z3Mrdf1rb/VUEkuq2\n7NjLjGWbmbZkI+8s3UTlrv1kGJSe1oqHruxBp/ymYUeUJBTlImgNvAAUA+XEdh/dWtv9VQSSTqoP\nOgvWVDFtySae+aCcrExj/C39VQZywiJVBKdKRSDpaumG7Vz75AdkZRrPjTyP0/VhNTkBx1sE+rSL\nSIR1aduM8SP7c6DauebJ9/ls886wI0kKUhGIRFyXts0Yd8sXZbB6666wI0mKURGIJIGu7WJlsHNv\nNb98fXHYcSTFqAhEkkTXds34wYCOvLZwPZ+s1ynDpe6oCESSyM0DT6dpTha/mbo87CiSQlQEIkkk\nt3E2PxjQkUkLKzQVSJ1REYgkmZsHnk6zhlncPm4uG7fvCTuOpAAVgUiSyW2czZgbSllbuZvrxsxU\nGcgpUxGIJKH+nVrzxx+cc6gMNm3fG3YkSWIqApEkFV8G1475QGUgJ01FIJLEVAZSF1QEIknuy5uJ\nVAZy4lQEIimgf6fW/M/3z2GNykBOgopAJEWcd8aXy2DzDpWBHB8VgUgKqSmD1ZW7GPHYuzw5/VO2\n7twXdiyJOBWBSIo574zWPHPzuRS0aMgvXvuE/r+Yyqjxc3n/0y0kw/lHpP7pxDQiKWzJ+u2Mn7WK\nl+asYdueA3TKa8K1/Yq5sm8RrZrofMipTmcoE5FDdu+r5rWFFYybtYrZ5ZVkZ2Zw8VntuO7cYs49\nvRVmFnZESQAVgYgcUc2U8Jc5a9i+5wCd8pvw06935eKzCsKOJnVMRSAitdq9r5pJCyt4asYKPlm/\nnct7FfKv3zhTm4xSiM5ZLCK1apSdyVV9i/jrqIHcc1EX3lhUwbDR7/DGovVhR5N6piIQSXMNMjO4\nY2hnJt4+kLbNG3LrM7O5Y/xcKrXbadpQEYgIAF8paM4rtw3gnou68PqiCi4aPZ2/faTpIB2oCETk\nkPjpoE2zHP7hz7O58zlNB6lORSAi/8dXCpoz4fYB3P21LkxaEJsO3tR0kLJUBCJyRA0yM7jza19M\nByP/PJu7nptL1S5NB6lGRSAitepeGHvv4M6hnXk1mA4mf7wh7FhSh1QEInJM2VkZ3H1RFybcPoC8\npjnc8nQZdz8/T9NBilARiMhxO7OwBROC6eCv89cxbPR0pmg6SHoqAhE5ITXTwSu3DaBVk2x++HQZ\n9zw/j8937Q87mpwkFYGInJSz2rdg4u0DuePCEibMX8dFo9/RdJCkdKwhETlli9Z+zk/+dz6frN9O\nl7ZNubRHAcN7FNC5bbOwo6U1HXROROrVvgMHeb5sNX+dv44PV27FHbq0bcrwHoUM79mOkjYqhfoW\nehGYWUNgOpADZAEvuvs/m1kr4HmgI7ASuNrdK2t7LBWBSHLZuG0Pry9az6SFFYdKoWvbZrFJoWcB\nJW2ahh0xLUShCAxo4u47zKwB8HfgTuBbwFZ3f8jM7gdauvt9tT2WikAkeW3Ytoc3Fq1n0oIKPiz/\nohSG9yzg0h4qhUQKvQgOC9OYWBH8CHgaGOzuFWZWAExz96613V9FIJIaNmzbw+sLK5i0sIKy8krc\noVu72KSgUqh7kSgCM8sEZgMlwOPufp+ZVbl7brDegMqa64fddyQwEqC4uLhveXl5wnKKSP1b//ke\nXl9UwWtHKIXhPQs4I1+lcKoiUQRxYXKBl4FRwN/jf/GbWaW7t6zt/poIRFJbfCl8uDL2lmG3ds0Y\n3qOAS1UKJy1SRQBgZj8HdgG3oE1DInIUNaUwaUFsUgCVwskKvQjMLB/Y7+5VZtYIeBP4D+ACYEvc\nm8Wt3P2ntT2WikAkPVV8vpvXF64/tPkIYqXwvfNO49t9O5Cdpc/E1iYKRdATGAtkEvsE8wvu/m9m\n1hp4ASgGyontPrq1tsdSEYhITSm8Mm8tC9Z8TvvcRvx4yBkqhFqEXgR1SUUgIjXcnRnLNjN6ylLm\nrqpSIdRCRSAiKe1IhXDbkBKu6lukQgioCEQkLbg705dtZvTkpcxbHSuEO4d25tulRcT2UE9fx1sE\nqk0RSWpmxgVd8nn5x19l7E39yG+Ww0//soDr/zCTNZW7wo6XFFQEIpIS4gvhwW+exbxVVXx99HSe\nnVlOMmz5CJOKQERSipnx3XNP4427BtG7OJcHXl7EDf8zi7VVu8OOFlkqAhFJSR1aNeaZm8/l3684\niznllXx99HT+/EG5zqR2BHqzWERS3uqtu7jvLwt479MtAJyR34Szi1ty9mktObu4JZ3bNCUjI/Xe\nWNZeQyIicQ4edGat3Mrs8krmlFcyZ1UllcF00Cwni97FufQpbsnZxbn06dCSFo0bhJz41B1vEWTV\nRxgRkbBlZBj9O7Wmf6fWQGy305Vbdh0qhTmrqnjsrWUcDP42LmnTlLOLcw9NDiX5qTk1gCYCEZFD\nduw9wILVVYeKYc6qSqpqpoaGWfTu8EUx9CnOpXnDaE8NmghERE5Q05wsvlqSx1dL8oDY1PDZ5p2H\nSmFOeSW/CaaGnKwMfjKsKzcNPJ3MJJ8UNBGIiJyAHXsPMH91FX98dyVTFm+g72kt+c+rekby8Nj6\nZLGISAI0zcliQEkeY27oy+jv9GL5xh1c+ugMxkxfQfXB6P9hfSQqAhGRk2BmfLNPEZPvHsT5nfN4\n8LXFXP3791mxaUfY0U6YikBE5BS0ad6QMTeU8vDVvVi2YTuXPDqDp2Yk13SgIhAROUVmxrfOLmLy\nPRcwsCSPf5+0mO8k0XSgIhARqSNtmzfkqRtL+fW3e7E0iaYDFYGISB0yM67sG5sOBsRNB59t3hl2\ntKNSEYiIJEDb5g35w5emg+lMnL8u7FhHpCIQEUmQmungzbsvoFu75vx8wiK274ne0U9VBCIiCdau\nRUP+bcSZVO3az9Pvl4cd5/9QEYiI1IOeRbkM7daGMTNWsGPvgbDjfImKQESkntz5tc5U7drPn979\nLOwoX6IiEBGpJz2LchnWvS2PTFnGG4vWhx3nEBWBiEg9+vXVvehR1ILbx82JTBmoCERE6lGzhg14\n+qZ+h8rgbx+FXwYqAhGRetasYQPGBmVw27Phl4GKQEQkBM2DMvhKQXP+3//ODzWLikBEJCTNGzbg\ngi757NxXHWoOFYGISJpTEYiIpDkVgYhIiLIyjeqDzoR5awnrHPIqAhGREF1zTjG9O+Ry53PzuPWZ\n2WzavrfeMySsCMysg5m9bWYfm9lHZnZnsLyVmU02s2XB95aJyiAiEnXtWjTkxVvP4/5LuvH2kk0M\nG/0OE+evq9fpIJETwQHgXnfvDvQHbjOz7sD9wFR37wxMDa6LiKStrMwMbr3gDF67YyDFrZtwx/i5\n/OiZOWzeUT/TQcKKwN0r3H1OcHk7sBhoD4wAxgY3GwtckagMIiLJpKRNM/5y63ncd3E33vpkIxc9\n/A4frNiS8Oetl/cIzKwj0AeYCbR194pg1Xqg7VHuM9LMysysbNOmTfURU0QkdFmZGfxo8BlMumMg\nZ7VvQcfWTRL+nJbo7VBm1hR4B3jQ3V8ysyp3z41bX+nutb5PUFpa6mVlZQnNKSKSasxstruXHut2\nCZ0IzKwB8BfgWXd/KVi8wcwKgvUFwMZEZhARkdolcq8hA/4ALHb3h+NWTQRuDC7fCExIVAYRETm2\nrAQ+9gDge8BCM5sXLPsZ8BDwgpndDJQDVycwg4iIHEPCisDd/w7YUVYPTdTziojIidEni0VE0pyK\nQEQkzakIRETSnIpARCTNJfwDZXXBzDYR28MoXh6wOYQ4J0o565Zy1i3lrFtRy3mau+cf60ZJUQRH\nYmZlx/OJubApZ91SzrqlnHUrWXIeTpuGRETSnIpARCTNJXMRPBl2gOOknHVLOeuWctatZMn5JUn7\nHoGIiNSNZJ4IRESkDqgIRETSXNIVgZldbGZLzGy5mUXmfMdm1sHM3jazj83sIzO7M1jeyswmm9my\n4HutJ+GpL2aWaWZzzezV4HrkcppZrpm9aGafmNliMzsvojnvDv6fLzKz8WbWMAo5zex/zGyjmS2K\nW3bUXGb2j8HraomZfT3knP8V/H9fYGYvm1n8yawikzNu3b1m5maWF3bOk5FURWBmmcDjwCVAd+Ba\nM+sebqpDDgD3unt3oD9wW5DtfmCqu3cGpgbXo+BOYueRrhHFnI8Cb7h7N6AXsbyRymlm7YE7gFJ3\nPwvIBK4hGjn/BFx82LIj5gp+Vq8Bzgzu89vg9RZWzsnAWe7eE1gK/GNEc2JmHYBhwKq4ZWHmPGFJ\nVQRAP2C5u69w933Ac8CIkDMB4O4V7j4nuLyd2C+t9sTyjQ1uNha4IpyEXzCzImA48FTc4kjlNLMW\nwCBiJzfC3fe5exURyxnIAhqZWRbQGFhHBHK6+3Rg62GLj5ZrBPCcu+9198+A5cReb6HkdPc33f1A\ncPUDoCiKOQOjgZ8C8XvehJbzZCRbEbQHVsddXxMsixQz6wj0AWYCbd29Ili1HmgbUqx4jxD7wT0Y\ntyxqOU8HNgF/DDZhPWVmTYhYTndfC/yK2F+DFcDn7v4mEcsZ52i5ovzaugl4PbgcqZxmNgJY6+7z\nD1sVqZzHkmxFEHlm1pTYeZrvcvdt8es8tq9uqPvrmtllwEZ3n32020QhJ7G/ss8GnnD3PsBODtu8\nEoWcwTb2EcSKqxBoYmbXx98mCjmPJKq54pnZA8Q2uz4bdpbDmVljYmdd/HnYWU5VshXBWqBD3PWi\nYFkkmFkDYiXwrLu/FCzeYGYFwfoCYGNY+QIDgG+Y2Upim9YuNLNniF7ONcAad58ZXH+RWDFELefX\ngM/cfZMB4AaoAAACSklEQVS77wdeAr5K9HLWOFquyL22zOz7wGXAd/2LDzxFKecZxP4AmB+8noqA\nOWbWjmjlPKZkK4IPgc5mdrqZZRN7M2ZiyJkAMDMjtj17sbs/HLdqInBjcPlGYEJ9Z4vn7v/o7kXu\n3pHYf7+33P16opdzPbDazLoGi4YCHxOxnMQ2CfU3s8bBz8BQYu8PRS1njaPlmghcY2Y5ZnY60BmY\nFUI+ILZ3ILHNl99w911xqyKT090Xunsbd+8YvJ7WAGcHP7uRyXlc3D2pvoBLie1F8CnwQNh54nIN\nJDZmLwDmBV+XAq2J7Z2xDJgCtAo7a1zmwcCrweXI5QR6A2XBf9NXgJYRzfmvwCfAIuDPQE4UcgLj\nib1vsZ/YL6mba8sFPBC8rpYAl4Scczmxbew1r6XfRTHnYetXAnlh5zyZLx1iQkQkzSXbpiEREalj\nKgIRkTSnIhARSXMqAhGRNKciEBFJcyoCkZNgZkVmNiE4iucKM3vMzHLCziVyMlQEIico+ODYS8Ar\nHjuKZ2egEfCfoQYTOUn6HIHICTKzocA/u/uguGXNgXKgg7vvCC2cyEnQRCBy4s4EvnTQPo8dYHAl\nUBJGIJFToSIQEUlzKgKRE/cx0Dd+QbBpqB2x48qIJBUVgciJmwo0NrMb4NApVH8NPObuu0NNJnIS\nVAQiJ8hje1h8E7jKzJYBW4CD7v5guMlETo72GhI5RWb2VWKHKP6mB+etFkkmKgIRkTSnTUMiImlO\nRSAikuZUBCIiaU5FICKS5lQEIiJpTkUgIpLm/j/0Ibf8IjSUfAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f14d0a76390>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Creating a DemandFunction object. Argument is no of consumers\n",
+    "airline_demand = DemandFunction(150)\n",
+    "\n",
+    "# Generate uniformly distributed demand\n",
+    "airline_demand.generate_uniform(20, 70)\n",
+    "\n",
+    "# Plot demand curve\n",
+    "airline_demand.plot_demand()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is also possible to generate normally distributed consumer bidding prices with the `generate_normal()` method, or add whatever priced you would like with the `set_demand()` method.\n",
+    "\n",
+    "Now that we have a demand function and a couple of airlines these can be added to an object of the `AirlineMarket` class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------\n",
+      "Airline:  Air France Seats left:  53  Price:  45\n",
+      "Airline:  British Airways Seats left:  42  Price:  50\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating AirlineMarket object\n",
+    "airline_market = AirlineMarket()\n",
+    "\n",
+    "# Adding airlines and consumers to market\n",
+    "airline_market.add_airline(british_airways)\n",
+    "airline_market.add_airline(air_france)\n",
+    "airline_market.set_demand(airline_demand)\n",
+    "\n",
+    "# Playing the game!\n",
+    "airline_market.allocate_tickets()"
    ]
   },
   {
