Found data and imported for AA forecasting

--- a/Forecasting/Pandas.ipynb
+++ b/Forecasting/Pandas.ipynb
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "Name: 2016-10-04 00:00:00, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
     "\n",
     "# Start and end date for data import.\n",
     "start_date = datetime.datetime(2016, 1, 1)\n",
-    "end_date = datetime.datetime(2017, 1, 1)\n",
+    "end_date = datetime.datetime(2016, 12, 31)\n",
     "\n",
     "# Importing data. \n",
     "# First and second argument is stock ticker and source respectivelye\n",
@@ -675,8 +675,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# Plotting close, high and low for December 2016\n",
     "american_airlines.loc['20161201':'20161231',['Open', 'Close', 'High', 'Low']].plot()\n",
     "plt.title(\"American Airlines, Dec 2016\")\n",
@@ -738,6 +736,172 @@
    "metadata": {},
    "source": [
     "This chart gives the same information to the analyst than as the one above. Each day is represented by a candlestick with a thick center (wax) and thin lines (wick) at the top and/or bottom. They also come in different colours; in this case they are red and black, but they may also be red and green, black and white or something else. A red candlestick, in this case, indicates that the stock has depreciated during the day (fallen), and a black candlestick indicates that the stock has appreciated (risen). The \"wax\" of the candlestick gives the opening and closing price of the stock. If the stock has the apprecieated the opening price is at the bottom of the wax and closing price on top. Vice versa for a depreciated stock; opening price on top of the wax and closing at the bottom. The ends of the \"wicks\" of the candlessticks indicates the highes and lowest stock price during intraday trading. This kind of chart may seem a bit strange the first time you see it, but one quickly becomes accustomed to it and realises the ease of used compared to the more traditional line plot above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forecasting a Stock Price with Scikit-Learn\n",
+    "Forecasting a stock price holds a certain appeal. If one is able to do so accurately, one has a path towards quick and easy riches. Regrettably, many have tried and failed to \"crack the code\" at the stock market. Nevertheless, the venture har its appeal and we will have a stab at it here.\n",
+    "\n",
+    "We shall try to forecast the stock price of American Airlines by an ordinary least squares regression, employing the Scikit-Learn package for Python. Scikit-learn contains simple and efficient tools for data mining and data analysis. It is also open source and built upon NumPy and matplotlib, integrating easily into what we have already done. In addition to containing several functions and classes for more traditional regression analysis, it contains implementations of severeal more moden machine learning methods and data for trying such methods out.\n",
+    "\n",
+    "In our task at hand we will first need to consider what factors may reasonably influence the stock price of American Airlines. In other words, what may make investors want to buy or sell the stock, thereby increasing or decreasing demand for it, and in turn making the price go up or down? We will look at several such factors\n",
+    "* **Jet Fuel Prices**: if jet fuel prices increase it is reasonable to assume the the cost of the airline increases, making the stock price go down. It is possible for an airline to hedge against the risk of a possilbe fuel price hike, but we will assume that AA made no such decision. Daily data is available from Federal Reserve Bank of St. Louis (FRED). The data is for Kerosene-Type Jet Fuel Prices on the US Gulf Coast. We assume that this is representative for the rest of the US jet fuel market.\n",
+    "* **GDP**: an increasing Gross Domestic Product should have a positive effect on the share price of AA. One would assume that people should are travelling more when the economy is booming - either for business or pleasure. Quarterly data is available from FRED.\n",
+    "* **Airline Fares**: if the price of airline tickets has gone up overall, one should assume that this translates to higher revenue for AA, and vice versa. Monthly data is available from FRED. The data is the consumer price index (CPI) for airline fares for urban consumers.\n",
+    "* **Number of Passengers Travelled**: when there are more passengers overall one would assume that this translates into more revenue for AA and therefore a higher stock price. Data for montly number of airline passengers on all US and foreign carriers is available from the Bureau of Transportation Statistics through Quandl."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Domestic</th>\n",
+       "      <th>International</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-12-31</th>\n",
+       "      <td>58219174.0</td>\n",
+       "      <td>17914603.0</td>\n",
+       "      <td>76133777.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-11-30</th>\n",
+       "      <td>59265544.0</td>\n",
+       "      <td>15637437.0</td>\n",
+       "      <td>74902981.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-31</th>\n",
+       "      <td>61705804.0</td>\n",
+       "      <td>16903381.0</td>\n",
+       "      <td>78609185.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-30</th>\n",
+       "      <td>58615875.0</td>\n",
+       "      <td>17159933.0</td>\n",
+       "      <td>75775808.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-31</th>\n",
+       "      <td>63493926.0</td>\n",
+       "      <td>20651294.0</td>\n",
+       "      <td>84145220.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-31</th>\n",
+       "      <td>66129967.0</td>\n",
+       "      <td>21426196.0</td>\n",
+       "      <td>87556163.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-06-30</th>\n",
+       "      <td>64753577.0</td>\n",
+       "      <td>19407251.0</td>\n",
+       "      <td>84160828.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-05-31</th>\n",
+       "      <td>62750408.0</td>\n",
+       "      <td>17868001.0</td>\n",
+       "      <td>80618409.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-04-30</th>\n",
+       "      <td>58893959.0</td>\n",
+       "      <td>16594195.0</td>\n",
+       "      <td>75488154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-03-31</th>\n",
+       "      <td>61593855.0</td>\n",
+       "      <td>17371898.0</td>\n",
+       "      <td>78965753.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-02-29</th>\n",
+       "      <td>51109604.0</td>\n",
+       "      <td>14408737.0</td>\n",
+       "      <td>65518341.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-31</th>\n",
+       "      <td>52474711.0</td>\n",
+       "      <td>16480418.0</td>\n",
+       "      <td>68955129.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Domestic  International       Total\n",
+       "Date                                             \n",
+       "2016-12-31  58219174.0     17914603.0  76133777.0\n",
+       "2016-11-30  59265544.0     15637437.0  74902981.0\n",
+       "2016-10-31  61705804.0     16903381.0  78609185.0\n",
+       "2016-09-30  58615875.0     17159933.0  75775808.0\n",
+       "2016-08-31  63493926.0     20651294.0  84145220.0\n",
+       "2016-07-31  66129967.0     21426196.0  87556163.0\n",
+       "2016-06-30  64753577.0     19407251.0  84160828.0\n",
+       "2016-05-31  62750408.0     17868001.0  80618409.0\n",
+       "2016-04-30  58893959.0     16594195.0  75488154.0\n",
+       "2016-03-31  61593855.0     17371898.0  78965753.0\n",
+       "2016-02-29  51109604.0     14408737.0  65518341.0\n",
+       "2016-01-31  52474711.0     16480418.0  68955129.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Importing jet fuel price data from FRED\n",
+    "fuel_price = web.DataReader(\"WJFUELUSGULF\", 'fred', start_date, end_date)\n",
+    "\n",
+    "# Importing GDP data from FRED\n",
+    "GDP = web.DataReader(\"GDP\", 'fred', start_date, end_date)\n",
+    "\n",
+    "# Importing airline fare CPI from FRED\n",
+    "CPI_airline_fare = web.DataReader(\"CUSR0000SETG01\", 'fred', start_date, end_date)\n",
+    "\n",
+    "# Importing number of airline passengers from Quandl\n",
+    "no_passengers = web.DataReader(\"BTS/AIRPASS\", 'quandl', start_date, end_date)"
    ]
   },
   {
