Partly done with stock example read-through

--- a/Forecasting/Pandas.ipynb
+++ b/Forecasting/Pandas.ipynb
@@ -5,11 +5,9 @@
    "metadata": {},
    "source": [
     "# Forecasting with pandas\n",
-    "Pandas is an open-source library for Python which provides high-performance and easy-to-use data structures. It is widely used in finance and economics because of its time series data analysis capabilities. It also has functunality of reading from and writing to different file formats, reshaping and pivoting of data sets and data splicing, merging, joining and merging. The name \"pandas\" stems from \"panel data\", an econometrics term for  Moreover, a pandas spin-off called pandas-datareader allows one to easily import data from online servers. This includes, but is not limitied to, stock information from Yahoo! and Google, economic indicators from the World Bank and statistics from OECD and Eurostat.\n",
+    "`pandas` is an open-source library for Python that provides high-performance and easy-to-use data structures. `pandas` is widely used in finance and economics because of its time series data analysis capabilities. It also has functunality for reading from and writing to different commonly used file formats, reshaping and pivoting of data sets as well as data splicing, merging and joining. The name \"pandas\" stems from \"panel data\", an econometrics term for multidimensional, structured data sets. Moreover, a `pandas` spin-off called `pandas-datareader` allows one to easily import data from online servers. This includes, but is not limitied to, stock information from Yahoo! and Google, economic indicators from the World Bank and statistics from OECD and Eurostat.\n",
     "\n",
     "## Pandas datastructures\n",
-    "DISCLAIMER: this section is somewhat tediuous.\n",
-    "\n",
     "The pandas library makes use of some special data structures: `Series` and `DataFrame`. We will have a quick look at them now. First we need to import the necessities"
    ]
   },
@@ -32,7 +30,7 @@
    "source": [
     "### Series\n",
     "\n",
-    "`Series` is a one-dimensional labeled array capable of holding any data type. The axis lables are collectively reffered to as the **index**. Now to construct a series filled with random numbers and index them with letters."
+    "`Series` is a one-dimensional labeled array capable of holding any data type. The axis lables are collectively reffered to as the **index**. Now to construct a `Series` filled with random numbers and index them with letters."
    ]
   },
   {
@@ -43,11 +41,11 @@
     {
      "data": {
       "text/plain": [
-       "a   -0.310275\n",
-       "b    0.125586\n",
-       "c   -1.260249\n",
-       "d    0.498086\n",
-       "e    1.174087\n",
+       "a    0.916179\n",
+       "b   -0.733313\n",
+       "c    0.164640\n",
+       "d    0.956163\n",
+       "e    1.595736\n",
        "dtype: float64"
       ]
      },
@@ -57,10 +55,7 @@
     }
    ],
    "source": [
-    "# Constructing Series\n",
     "s = pd.Series(np.random.randn(5), index=['a', 'b', 'c', 'd', 'e'])\n",
-    "\n",
-    "# Displaying\n",
     "s"
    ]
   },
@@ -68,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numerous operations can be applied to this data structure."
+    "If you do not provide an index for the `Series`, it will be numeric by default. Numerous operations can be applied the `Series` data structure."
    ]
   },
   {
@@ -79,7 +74,9 @@
     {
      "data": {
       "text/plain": [
-       "e             1.174087\n",
+       "a             0.916179\n",
+       "d             0.956163\n",
+       "e             1.595736\n",
        "f             2.000000\n",
        "something    42.000000\n",
        "dtype: float64"
@@ -97,9 +94,6 @@
     "# Setting a new value with index \"something\"\n",
     "s['something'] = 42\n",
     "\n",
-    "# What do we have now?\n",
-    "s\n",
-    "\n",
     "# Displaying everything larger than 0.5\n",
     "s[s > 0.5]"
    ]
@@ -113,12 +107,12 @@
      "data": {
       "text/plain": [
        "count     7.000000\n",
-       "mean      6.318176\n",
-       "std      15.768594\n",
-       "min      -1.260249\n",
-       "25%      -0.092344\n",
-       "50%       0.498086\n",
-       "75%       1.587044\n",
+       "mean      6.699915\n",
+       "std      15.591893\n",
+       "min      -0.733313\n",
+       "25%       0.540410\n",
+       "50%       0.956163\n",
+       "75%       1.797868\n",
        "max      42.000000\n",
        "dtype: float64"
       ]
@@ -138,7 +132,7 @@
    "metadata": {},
    "source": [
     "### DataFrame\n",
-    "`DataFrame` is a 2-dimensional labeled data structure with columns of potentially different types. One can think of it like a spreadsheet or SQL table. Here is an example of use."
+    "`DataFrame` is a 2-dimensional labeled data structure with columns of potentially different types. One can think of it like a spreadsheet or SQL table. Here is an example where we put a 6x4 `numpy` array into a `DataFrame` and indexed it with dates from a `DatetimeIndex` object"
    ]
   },
   {
@@ -160,7 +154,7 @@
     }
    ],
    "source": [
-    "# Constructing DateTimeIndex object\n",
+    "# Constructing DateTimeIndex object for lates use\n",
     "dates = pd.date_range('20170101', periods=6)\n",
     "\n",
     "# What is this?\n",
@@ -555,12 +549,12 @@
    "metadata": {},
    "source": [
     "## Importing Stock Data with pandas-datareader\n",
-    "`pandas-datareader` is enables one to import data from online databases such as Yahoo! Finance, Google Finace, Quandl, FRED, OECD and the World Bank. Functions from `pandas_datareader.data` and `pandas_datareader.wb` extract the data from the various Internet source into a pandas `DataFrame`. As a first exampel, let us get historical stock prices from Yahoo! Finance. "
+    "`pandas-datareader` enables one to import data from online databases such as Yahoo! Finance, Google Finace, Quandl, FRED, OECD and the World Bank. Functions from `pandas_datareader.data` and `pandas_datareader.wb` extract the data from the various Internet source into a pandas `DataFrame`. As an intro to this very powerful tool, let us get historical stock prices from Yahoo! Finance. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +575,7 @@
        "Name: 2016-10-04 00:00:00, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,12 +589,19 @@
     "end_date = datetime.datetime(2016, 12, 31)\n",
     "\n",
     "# Importing data. \n",
-    "# First and second argument is stock ticker and source respectivelye\n",
+    "# First and second argument is stock ticker and source respectively\n",
     "american_airlines = web.DataReader(\"AAL\", 'google', start_date, end_date)\n",
     "\n",
     "# Showing data from a particular day\n",
     "print(\"American Airlines\")\n",
     "american_airlines.loc['20161004']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The \"thing\" we have just imported has the added benefit of being a `pandas` `DataFrame` object. As one can clearly see, we have five different values for each index, which is the date; Open, High, Low, Close and Volume. \"Open\" is the price of the stock at the start of the day when the stock markets opens, \"High\" and \"Low\" are the highest and lowest price of the stock during the day, \"Close\" is the price of the stock as the market closes and \"Volume\" is the number of stocks that has been trading during the day. "
    ]
   },
   {
@@ -649,8 +650,6 @@
     }
    ],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
     "# Plotting closing prices\n",
     "american_airlines.loc[:,'Close'].plot()\n",
     "plt.title(\"American Airlines, 2016\")\n",
